Forgot delta in denominator in summary

--- a/index.html
+++ b/index.html
@@ -2476,7 +2476,7 @@
 </g>
 </svg></span>,</li>
 <li><span class="mjpage"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="20.067ex" height="4.843ex" style="vertical-align: -1.838ex;" viewBox="0 -1293.7 8639.8 2085" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-150-Title">
-<title id="MathJax-SVG-150-Title">m_n = \frac{B(α + δ / ε (n+ε) , β)}{B(α, β)}</title>
+<title id="MathJax-SVG-150-Title">m_n = \frac{B(α + δ / ε (n+ε) , β)}{B(α + δ, β)}</title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-6D" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-6E" x="1242" y="-213"></use>
@@ -2501,13 +2501,15 @@
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B2" x="6882" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMAIN-29" x="7449" y="0"></use>
 </g>
-<g transform="translate(1762,-476)">
+<g transform="translate(1329,-476)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-42" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMAIN-28" x="759" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B1" x="1149" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-2C" x="1789" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMATHI-3B2" x="2068" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMAIN-29" x="2634" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-2B" x="1789" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="2568" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-2C" x="3012" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-3B2" x="3291" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-29" x="3857" y="0"></use>
 </g>
 </g>
 </g>
