--- a/index.html
+++ b/index.html
@@ -5186,8 +5186,8 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 </g>
  <use xlink:href="#MJMATHI-74" x="3582" y="0"></use>
 </g>
-</svg></span>, the full posterior is <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="60.912ex" height="5.509ex" style="vertical-align: -3.005ex;" viewBox="0 -1078.4 26225.8 2372" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-262-Title">
-<title id="MathJax-SVG-262-Title"> P(p; p_t | x_1, x_2, …, x_M) ∝ p^{α - 1} (1-p)^{β - 1} \prod_m=1^M r_m p^{δ_m} + s, </title>
+</svg></span>, the full posterior is <span class="mjpage mjpage__block"><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="55.653ex" height="7.343ex" style="vertical-align: -3.005ex;" viewBox="0 -1867.7 23961.4 3161.4" role="img" focusable="false" xmlns="http://www.w3.org/2000/svg" aria-labelledby="MathJax-SVG-262-Title">
+<title id="MathJax-SVG-262-Title"> P(p; p_t | x_1, x_2, …, x_M) ∝ p^{α - 1} (1-p)^{β - 1} \prod_{m=1}^M r_m p^{δ_m} + s, </title>
 <g stroke="currentColor" fill="currentColor" stroke-width="0" transform="matrix(1 0 0 -1 0 0)" aria-hidden="true">
  <use xlink:href="#MJMATHI-50" x="0" y="0"></use>
  <use xlink:href="#MJMAIN-28" x="751" y="0"></use>
@@ -5237,28 +5237,28 @@ print(list(zip(sampleMoments, analyticalMoments)))</code></pre>
 </g>
 </g>
 <g transform="translate(17632,0)">
- <use xlink:href="#MJSZ2-220F" x="0" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMATHI-6D" x="464" y="-1487"></use>
+ <use xlink:href="#MJSZ2-220F" x="123" y="0"></use>
+<g transform="translate(0,-1090)">
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-6D" x="0" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-3D" x="878" y="0"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMAIN-31" x="1657" y="0"></use>
 </g>
- <use xlink:href="#MJMAIN-3D" x="19188" y="0"></use>
-<g transform="translate(20245,0)">
- <use xlink:href="#MJMAIN-31" x="0" y="0"></use>
- <use transform="scale(0.707)" xlink:href="#MJMATHI-4D" x="707" y="583"></use>
+ <use transform="scale(0.707)" xlink:href="#MJMATHI-4D" x="552" y="1627"></use>
 </g>
-<g transform="translate(21589,0)">
+<g transform="translate(19324,0)">
  <use xlink:href="#MJMATHI-72" x="0" y="0"></use>
  <use transform="scale(0.707)" xlink:href="#MJMATHI-6D" x="638" y="-213"></use>
 </g>
-<g transform="translate(22761,0)">
+<g transform="translate(20497,0)">
  <use xlink:href="#MJMATHI-70" x="0" y="0"></use>
 <g transform="translate(503,412)">
  <use transform="scale(0.707)" xlink:href="#MJMATHI-3B4" x="0" y="0"></use>
  <use transform="scale(0.574)" xlink:href="#MJMATHI-6D" x="547" y="-185"></use>
 </g>
 </g>
- <use xlink:href="#MJMAIN-2B" x="24477" y="0"></use>
- <use xlink:href="#MJMATHI-73" x="25477" y="0"></use>
- <use xlink:href="#MJMAIN-2C" x="25947" y="0"></use>
+ <use xlink:href="#MJMAIN-2B" x="22212" y="0"></use>
+ <use xlink:href="#MJMATHI-73" x="23213" y="0"></use>
+ <use xlink:href="#MJMAIN-2C" x="23682" y="0"></use>
 </g>
 </svg></span> and since</p>
 <ul>
